added form validations

--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://kit.fontawesome.com/cb95630ffd.js" crossorigin="anonymous"></script>
   </body>
 </html>
